fix video player, visual bug fixes and footer alignment

--- a/UsersStaticSite/src/index.css
+++ b/UsersStaticSite/src/index.css
@@ -82,3 +82,6 @@
     width: 100%;
   }
 }
+.loading-spinner {
+  border-color: #ffffff !important;
+}
